--- a/fenna-files/references.bib
+++ b/fenna-files/references.bib
@@ -498,3 +498,12 @@
   publisher={Mouton de Gruyter},
   address={Berlin}
 }
+
+@article{johnson2000,
+  title={Few dogs eat Whiskas or cats Alpo},
+  author={Johnson, Kyle},
+  journal={UMOP},
+  volume={23},
+  pages={59--82},
+  year={2000}
+}
