--- a/conclusion.tex
+++ b/conclusion.tex
@@ -32,3 +32,10 @@ then the predictions would be..
 The genitive differs from the other cases in a particular way. That is, nominative, accusative and dative are dependents of the verb (or prepositions). Genitives can be dependents of verbs, or they can be dependents of nouns, as possessors or partitives. Consider the example in \ref{ex:gothic-gen-acc}. The genitive relative pronoun \tit{þiz(e)} `what.\tsc{gen}' is a dependent of the noun \tit{waiht} `thing'. Most of the examples in headless relatives contain genitives that depend on nouns and not those that depend on verbs. The (genitive) possessor is also placed far away from the other three cases in \posscitet{keenan1977} relativization hiearchy.
 
 I leave it for future research..
+
+
+\section{Diachronic part}
+
+First, German only had the d-pronoun and attraction. The pattern of attraction that came with that pronoun is ext only.
+At some point, German invented the wh-pronoun. Helmut showed how it emerged. With that came the other pattern: int only. Some people lost the attraction (but everybody kept the d-pronoun) and with that the pattern disappeared.
+So the patterns in headless relatives follow from the relative pronouns in the language.
