--- a/details.tex
+++ b/details.tex
@@ -2,6 +2,13 @@
 
 \chapter{Technical implementation}
 
+\section{Deletion operation}
+
+What is the nature of this deletion? morphological deletion? doesn't have much to do with ellipsis
+
+it is not optional
+
+
 
 \section{Background}
 
