--- a/presentation/GK-colloquium-2juni.tex
+++ b/presentation/GK-colloquium-2juni.tex
@@ -323,18 +323,18 @@ I trust\scsub{[dat]} \ac{rel}.\ac{dat}.\tsc{an} also Maria likes\scsub{[acc]}.\\
 %%
 
 
-\begin{frame}{Again a reflex of morphology in syntax?}
+\begin{frame}{Different patterns and different pronouns?}
 
   \begin{table}[h]
   	\center
   		\begin{tabular}{cccc}
   		\toprule
-                      & \multicolumn{2}{l}{headless relatives}  & \only<2>{relative pronoun}    \\
+                      & \multicolumn{2}{l}{headless relatives}  & \only<2-3>{relative pronoun}    \\
   		 					      & \ac{int}>\ac{ext}		& \ac{ext}>\ac{int}	&                                \\
   								      \cmidrule{2-3}
-  		Gothic		      &	\tsc{int}						&	\tsc{ext}					& \only<2-3>{\tsc{d} + \tsc{comp}} \\
-  		Modern German 	& \tsc{int}			 			&	*								  & \only<2-3>{\tsc{wh}}             \\
-  		Old High German	& * 									&	\tsc{int}			   	& \only<2-3>{\tsc{d}}              \\
+  		Gothic		      &	\tsc{int}						&	\tsc{ext}					& \only<2-3>{\tsc{d} + ϕ + \tsc{comp}} \\
+  		Modern German 	& \tsc{int}			 			&	*								  & \only<2-3>{\tsc{wh} + ϕ}             \\
+  		Old High German	& * 									&	\tsc{ext}			   	& \only<2-3>{\tsc{d} + ϕ}              \\
   		\bottomrule
   		\end{tabular}
   \end{table}
@@ -383,7 +383,7 @@ how?
 
   \begin{itemize}
     \item the relative pronoun in Old High German is actually the \tbf{external head} which has deleted the (attracted) relative pronoun
-    \item in Modern German, the relative pronoun in the relative clause deletes an indefinite
+    \item in Modern German, the relative pronoun in the relative clause deletes an \tbf{indefinite}
     \item Gothic: ?
   \end{itemize}
 
@@ -394,7 +394,7 @@ how?
 
 \pause
 
-\exg. unde ne wolden níet besên den mort \mybox{\tbf{den}} \tbf{dô} \tbf{was} \tbf{geschên}\\
+\exg. unde ne wolden níet besên \textcolor{goethe}{den} \textcolor{goethe}{mort} \mybox{\tbf{\textcolor{goethe}{den}}} \tbf{dô} \tbf{was} \tbf{geschên}\\
  and not wanted not see\scsub{[acc]} the.\tbf{\ac{acc}}.\ac{sg} murder \ac{rel}.\tbf{\ac{acc}}.\ac{sg} there had happened\scsub{[nom]}\\
  `and they didn't want to see the murder that had happened.' \flushfill{Middle High Germans, \ac{nib} 1391,14, \pgcitealt{grimm1866}{319}, after \pgcitealt{pittner1995}{198}}
 
@@ -714,19 +714,21 @@ how?
   \center
     \begin{tabular}{cccc}
     \toprule
-                          & \multicolumn{2}{l}{headless relatives}  & \only<2>{relative pronoun}    \\
+                          & \multicolumn{2}{l}{headless relatives}  & {relative pronoun}    \\
                           & \ac{int}>\ac{ext}		& \ac{ext}>\ac{int}	&                               \\
                           \cmidrule{2-3}
-    Old High German	& * 					  &	\tsc{int}	  & \tsc{d}                  \\
+    Old High German	& * 					  &	\tsc{ext}	  & \tsc{d} + ϕ                  \\
     \bottomrule
     \end{tabular}
 \end{table}
+
+\vspace{2em}\pause
 
 derived from headed relative\pause
 
 \begin{itemize}
   \item \tbf{attraction} + deletion under \tbf{identity} under c-command\pause
-  \item \tbf{no attraction} + deletion under \tbf{containment} under c-command
+  \item \tbf{no attraction} + \tbf{two} deletions under \tbf{containment} under c-command
 \end{itemize}
 
 
@@ -735,36 +737,36 @@ derived from headed relative\pause
 
 
 
-\begin{frame}{Modern German: not derived from headed relative}
-\pause
-
-\exg. Den schilt \mybox{\tbf{den}} \tbf{er} {\tbf{vür} \tbf{bôt}} der wart schiere zeslagen\\
-the.\tsc{acc} shield.\tsc{acc} \tsc{rel}.\tsc{acc}.\tsc{an} he held\scsub{acc}, that.\tsc{nom} was quickly shattered\scsub{nom}\\
-`The shield he held was quickly shattered' \label{ex:iaheaded}\flushfill{Middle High German}
-
-\pause
-
-\exg. Ich {lade ein} \mybox{\tbf{wem}} \tbf{auch} \tbf{Maria} \tbf{vertraut}. \\
- I invite\scsub{[acc]} \ac{rel}.\ac{dat}.\tsc{an} also Maria trusts\scsub{[dat]}.\\
- `I invite whoever Maria also trusts.' \flushfill{Modern German, \pgcitealt{vogel2001}{344}}\label{ex:mg-acc-dat}
-
-\pause
-
-no, because:
-
-\begin{itemize}
-  \item different pronoun
-  \item extra pronoun
-  \item different sentence structure
-\end{itemize}
-
-
-\end{frame}
-
-
+% \begin{frame}{Modern German: not derived from headed relative}
+% \pause
+%
+% \exg. \textcolor{goethe}{Den} \textcolor{goethe}{schilt} \mybox{\tbf{\textcolor{goethe}{den}}} \tbf{er} {\tbf{vür} \tbf{bôt}} der wart schiere zeslagen\\
+% the.\tsc{acc} shield.\tsc{acc} \tsc{rel}.\tsc{acc}.\tsc{an} he held\scsub{acc}, that.\tsc{nom} was quickly shattered\scsub{nom}\\
+% `The shield he held was quickly shattered' \label{ex:iaheaded}\flushfill{Middle High German}
+%
+% \pause
+%
+% \exg. Ich {lade ein} \mybox{\tbf{wem}} \tbf{auch} \tbf{Maria} \tbf{vertraut}. \\
+%  I invite\scsub{[acc]} \ac{rel}.\ac{dat}.\tsc{an} also Maria trusts\scsub{[dat]}.\\
+%  `I invite whoever Maria also trusts.' \flushfill{Modern German, \pgcitealt{vogel2001}{344}}\label{ex:mg-acc-dat}
+%
+% \pause
+%
+% no, because:
+%
+% \begin{itemize}
+%   \item different pronoun
+%   \item extra pronoun
+%   \item different sentence structure
+% \end{itemize}
+%
+%
+% \end{frame}
 
 
-\begin{frame}{Modern German: matching analysis}
+
+
+\begin{frame}{Modern German: raising analysis}
 
 \scriptsize{
 
@@ -865,10 +867,10 @@ no, because:
   \center
     \begin{tabular}{cccc}
     \toprule
-                          & \multicolumn{2}{l}{headless relatives}  & \only<2>{relative pronoun}    \\
+                          & \multicolumn{2}{l}{headless relatives}  & {relative pronoun}    \\
                           & \ac{int}>\ac{ext}		& \ac{ext}>\ac{int}	&                               \\
                           \cmidrule{2-3}
-    Modern German	        & \tsc{int} 				  &	*	                & \tsc{wh}                      \\
+    Modern German	        & \tsc{int} 				  &	*	                & \tsc{wh} + ϕ                     \\
     \bottomrule
     \end{tabular}
 \end{table}
@@ -878,37 +880,40 @@ no, because:
 \pause
 
 \begin{itemize}
-  \item deletion under \tbf{containment} under c-command\pause
+  \item \tbf{two} deletions under \tbf{containment} under c-command
 \end{itemize}
 
-\ex. Few dogs like Whiskas and \sout{few} cats \sout{like} Alpo.\flushfill{\citealt{johnson2000}}
-
 \end{frame}
 
-
-\begin{frame}
-
-  deletion under Kayne's c-command under containment in two parts
-
-  similar to gapping + determiner deletion?
-
-  %two separate ellipsis operations
-  %gapping + determiner deletion
-  %difference: it is obligatory, not optional
-
-
-\end{frame}
 
 
 
 
 \begin{frame}{Gothic: more questions than answers}
 
+\pause
+
+  \begin{table}[h]
+    \center
+      \begin{tabular}{cccc}
+      \toprule
+                            & \multicolumn{2}{l}{headless relatives}  & {relative pronoun}    \\
+                            & \ac{int}>\ac{ext}		& \ac{ext}>\ac{int}	&                               \\
+                            \cmidrule{2-3}
+      Gothic       	        & \tsc{int} 				  &	\tsc{ext}         & \tsc{d} + ϕ +\tsc{comp}       \\
+      \bottomrule
+      \end{tabular}
+  \end{table}
+
+\pause
+
+  \vspace{2em}
+
 \begin{itemize}
   \item not like Old High German
     \begin{itemize}
       \item no attraction in headed relatives \citep{harbert1992}
-      \item phonological effects with \tit{-ei} > relative pronoun is in the relative clause \citep{harbert1992}
+      \item phonological effects with \tit{-ei} > relative pronoun is in the relative clause \citep{harbert1992}\pause
     \end{itemize}
   \item how does the external case end up in the relative clause? (and why doesn't it in Modern German?)
 \end{itemize}
@@ -929,6 +934,59 @@ no, because:
 % light-headed relatives: t, c
 % Bartosz: indef = t
 
+\begin{frame}{Conclusion}
+
+headless relatives show different patterns across Germanic
+\pause
+
+\begin{itemize}
+  \item different patterns all have different relative pronouns\pause
+  \item possibility for different derivations
+\end{itemize}
+
+\pause
+
+two predictions\pause
+
+\begin{itemize}
+  \item different patterns can coincide in a single language\pause
+  \item languages with identical morphology show identical patterns in their headless relatives
+\end{itemize}
+
+
+\end{frame}
+
+
+\begin{frame}{Open issues}
+
+\pause
+
+two separate (obligatory!) deletions \pause
+
+\ex. Few dogs like Whiskas and \sout{few} cats \sout{like} Alpo.\flushfill{\citealt{johnson2000}}
+
+\pause
+
+
+containment relation(?) between
+
+\begin{itemize}
+  \item \tsc{wh}-relative and indefinite
+  \item demonstrative and \tsc{d}-relative
+\end{itemize}
+
+
+
+\end{frame}
+
+\appendix
+
+\begin{frame}[allowframebreaks]{References}
+
+  \newrefcontext[sorting=nyt]
+	\printbibliography
+
+\end{frame}
 
 
 \begin{frame}{Matching only languages like Polish}
@@ -1018,20 +1076,9 @@ no, because:
 
 \phantom{x}
 
-\citealt{wiland2019}
+Polish has small definites \citealt{wiland2019}
 
 }
-
-\end{frame}
-
-
-
-\appendix
-
-\begin{frame}[allowframebreaks]{References}
-
-  \newrefcontext[sorting=nyt]
-	\printbibliography
 
 \end{frame}
 
